# bamboo-smp

./: .clangd  .gitignore  CMakeLists.txt  README.md  gitpush.sh
.cache/clangd/index/: BambooSMP.cu.0F67AABA8DA22B1F.idx  BambooSMP.cu.62BE77584EB4FC35.idx  BambooSMP.cuh.08062F3A5B062A75.idx  BambooSMPExec.cu.689A5F92C11F04BD.idx  BambooSMPExec.cu.8CC573FAAC04BD0E.idx  BambooSMPExecCPU.cu.AF2D032A6636CB29.idx  BambooSMPExecCPU.cu.E23E69EACE679C4F.idx  BambooSMPExecGPU.cu.E1A3591D736B30E6.idx  BambooSMPExecGPU.cu.E6FA624CEDC24430.idx  BambooSMPGPUKernel.cu.54E3F3B1F6905760.idx  BambooSMPHybrid.cu.82DFC5DBE3931E5E.idx  BambooSMPInit.cu.38C0417AEEA4C759.idx  BambooSMPInit.cu.46EC7B3E8117C3B5.idx  BambooSMPPostproc.cu.BAD55C80C51F9734.idx  BambooSMPPostproc.cu.C02C8D3D5E757466.idx  BambooSMPPrecheck.cu.750BFDC9D4EBCA9F.idx  BambooSMPPrecheck.cu.CB07D5AF278992F7.idx  BambooSMPSerial.cu.4F604E433FD6D401.idx  BambooTest.cu.427BC049235AFA11.idx  BambooTest.cu.E9154ECEE14BB32F.idx  BatchData.h.7A10675BACD371F6.idx  BatchDataCPU.h.74842E77E8FD460A.idx  FourSchemeEasyTest.cu.33943F0FA9AA1150.idx  FourSchemeEasyTest.cu.9659CA7FA79E5B44.idx  FourSchemeHardTest.cu.505773D75BC70E64.idx  FourSchemeHardTest.cu.FD52705FED070284.idx  FourSchemeTest.cu.424C8BE4AE9069E8.idx  PRNode.cu.462459509C57B649.idx  (+805 more)
data/: congested_case.txt  perfect_case.txt  random_case.txt
include/smp/: BambooSMP.cuh  PRNode.cuh  flatten.cuh  gs.cuh  smp.cuh
include/utils/: generateWorkloadCongested.hpp  generateWorkloadPerfect.hpp  generateWorkloadRandom.hpp  generateWorkloadSolo.hpp  utils.hpp
src/: CMakeLists.txt
src/bamboosmp/: bamboosmp.cu
src/smp/: BambooSMP.cu  BambooSMPExec.cu  BambooSMPExecCPU.cu  BambooSMPExecCPUSingleGPU.cu  BambooSMPExecGPU.cu  BambooSMPInit.cu  BambooSMPPostproc.cu  BambooSMPPrecheck.cu  PRNode.cu  flatten.cu  gs.cu  gsSerial.cu  smp.cu
test/: bamboosmpTest.cu  singleGPUTest.cu  testbase.cpp  testbase.h
